<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@color/cerulean"
                    android:maxLines="1"
                    android:maxWidth="250dp"
                    android:gravity="left"
                    android:text="@string/title1"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#e0aaff"
                    android:gravity="right"
                    android:text="과학"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:text="@string/detail1" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:foregroundGravity="right"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/answer_circle" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/result"

                android:layout_alignBottom="@id/result"
                android:layout_centerInParent="true"
                android:layout_marginBottom="0dp"

                android:gravity="center"
                android:letterSpacing="0.04"
                android:text="@string/correct1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#e0aaff"
        android:gravity="left"
        android:text="11/12"
        android:textColor="@color/darker_gray"
        android:textSize="14dp" />


</LinearLayout>
