<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recycler_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/celeste"
        android:theme="@style/LightToolbarTheme">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/celeste"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Q&amp;A 게시판"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_go_to_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:text="해설 보기" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@drawable/stroke"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#e0aaff"
                    android:text="제목"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:maxLines="3"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/question1"
                android:textSize="18dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center|right"
            android:layout_marginRight="30dp">

            <ImageView
                android:id="@+id/icon_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="right"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/icon_like" />

            <TextView
                android:id="@+id/likeCnt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignTop="@id/likeCnt"

                android:layout_alignBottom="@id/likeCnt"
                android:layout_centerInParent="true"
                android:layout_marginTop="0dp"

                android:gravity="center"
                android:letterSpacing="0.04"
                android:text="@string/heart1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="left"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:backgroundTint="#e0aaff"
            android:gravity="left"
            android:text="11/12"
            android:textColor="@color/darker_gray"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#e0aaff"
            android:gravity="right"
            android:text="@string/user"
            android:textColor="@color/darker_gray"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:hint="댓글을 입력하세요" />

        <Button
            android:id="@+id/btn_comment"
            android:backgroundTint="@color/cerulean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="작성"
            android:textSize="15dp" />

    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_line"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>